# StackForDev

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PROJECT_IDEA.md  README.md  generate_dockerfile.dockerfile  generate_dockerfile.py  pylintrc  pyproject.toml  s3_helper.py
.github/workflows/: ci.yml  deploy.yml  terraform.yml  workflow.yml
aws_resources/: api_gateway.tf  cloudwatch.tf  ecr.tf  iam.tf  lambda.tf  main.tf  s3.tf  variables.tf
src/: Dockerfile  Makefile  generate_dockerfile.py  generator_core.py  s3_helper.py
src/cli/: api_client.py  config.py  display.py  interactive.py  main.py
src/cli/commands/: generate.py  info.py  init.py
src/docker_templates/: compose_template.py  go_template.py  java_template.py  javascript_template.py  python_template.py  rust_template.py  shell_template.py
tests/: test_generate_dockerfile.py  test_integration.py
tests/test_cli/: test_api_client.py  test_config.py  test_generate_command.py  test_info_command.py  test_init_command.py  test_interactive.py
