[tool.poetry]
name = "stackfordev"
version = "0.1.0"
description = ""
authors = ["ZisisKostakakisGithubPersonal <dev@zisiskostakakis.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
boto3 = "^1.35.62"
python-dotenv = "^1.0.1"
boto3-stubs = {extras = ["essential"], version = "^1.35.62"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
