[tool.poetry]
name = "stackfordev"
version = "0.1.4"
description = "Generate tailored Dockerfiles for development environments"
authors = ["Zisis Kostakakis <dev@zisiskostakakis.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ZisisKostakakis/StackForDev"
repository = "https://github.com/ZisisKostakakis/StackForDev"
packages = [{include = "src"}]
keywords = ["docker", "dockerfile", "development", "devcontainer", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
stackfordev = "src.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
click = "^8.1"
rich = "^13.0"
httpx = "^0.27"

[tool.poetry.group.lambda.dependencies]
boto3 = "^1.35.62"
python-dotenv = "^1.0.1"
boto3-stubs = {extras = ["essential"], version = "^1.35.62"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
respx = "^0.21"
pytest-cov = "^5.0"
pylint = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
